; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/core/extr_hwdep.c_snd_hwdep_poll.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/core/extr_hwdep.c_snd_hwdep_poll.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { %struct.snd_hwdep* }
%struct.snd_hwdep = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 (%struct.snd_hwdep.0*, %struct.file.1*, i32*)* }
%struct.snd_hwdep.0 = type opaque
%struct.file.1 = type opaque

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.file*, i32*)* @snd_hwdep_poll to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @snd_hwdep_poll(%struct.file* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.file*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.snd_hwdep*, align 8
  store %struct.file* %0, %struct.file** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load %struct.file*, %struct.file** %4, align 8
  %8 = getelementptr inbounds %struct.file, %struct.file* %7, i32 0, i32 0
  %9 = load %struct.snd_hwdep*, %struct.snd_hwdep** %8, align 8
  store %struct.snd_hwdep* %9, %struct.snd_hwdep** %6, align 8
  %10 = load %struct.snd_hwdep*, %struct.snd_hwdep** %6, align 8
  %11 = getelementptr inbounds %struct.snd_hwdep, %struct.snd_hwdep* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i32 (%struct.snd_hwdep.0*, %struct.file.1*, i32*)*, i32 (%struct.snd_hwdep.0*, %struct.file.1*, i32*)** %12, align 8
  %14 = icmp ne i32 (%struct.snd_hwdep.0*, %struct.file.1*, i32*)* %13, null
  br i1 %14, label %15, label %26

15:                                               ; preds = %2
  %16 = load %struct.snd_hwdep*, %struct.snd_hwdep** %6, align 8
  %17 = getelementptr inbounds %struct.snd_hwdep, %struct.snd_hwdep* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  %19 = load i32 (%struct.snd_hwdep.0*, %struct.file.1*, i32*)*, i32 (%struct.snd_hwdep.0*, %struct.file.1*, i32*)** %18, align 8
  %20 = load %struct.snd_hwdep*, %struct.snd_hwdep** %6, align 8
  %21 = bitcast %struct.snd_hwdep* %20 to %struct.snd_hwdep.0*
  %22 = load %struct.file*, %struct.file** %4, align 8
  %23 = bitcast %struct.file* %22 to %struct.file.1*
  %24 = load i32*, i32** %5, align 8
  %25 = call i32 %19(%struct.snd_hwdep.0* %21, %struct.file.1* %23, i32* %24)
  store i32 %25, i32* %3, align 4
  br label %27

26:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %27

27:                                               ; preds = %26, %15
  %28 = load i32, i32* %3, align 4
  ret i32 %28
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
